--- a/client/src/styles/AuthStyles.css
+++ b/client/src/styles/AuthStyles.css
@@ -7,14 +7,14 @@
   justify-content: center;
   min-height: 70vh;
   flex-direction: column;
-  background-color: #ffdee9;
+  background-color: lightgray;
   background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
 }
 
 .form-container form {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 20px;
-  background-color: #fff;
+  background-color: linen;
 }
 
 .form-container form .title {
@@ -31,11 +31,12 @@
 }
 
 .form-container form button {
-  border: 1px solid black;
+  border: 1px solid blue;
   border-radius: 0;
-  background-color: #000;
+  background-color: blue;
   color: white;
   width: 250px;
+  
 }
 
 .form-container form button:hover {
